# aegis

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci-java.yml  ci-python.yml  hygiene.yml
deploy/helm/aegis/: Chart.yaml  values.yaml
deploy/helm/aegis/templates/: _helpers.tpl  analytics.yaml  postgres.yaml  redis.yaml  secret.yaml  shortener.yaml
deploy/helm/observability/: Chart.yaml  values.yaml
deploy/helm/observability/dashboards/: aegis.json
deploy/helm/observability/templates/: dashboard-aegis.yaml  prometheusrule-slo.yaml  servicemonitors.yaml
deploy/kind/: cluster.yaml
docs/: observability.md  roadmap.md
scripts/: bootstrap.sh  check-hygiene.sh
services/analytics-svc/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/analytics-svc/app/: config.py  consumer.py  logging_config.py  main.py  models.py  store.py
services/analytics-svc/tests/: test_analytics.py
services/shortener-api/: .env.example  Dockerfile  README.md  pom.xml
services/shortener-api/src/main/java/com/aegis/shortener/: ShortenerApiApplication.java
services/shortener-api/src/main/java/com/aegis/shortener/config/: AdminSeeder.java  AppProperties.java  SecurityConfig.java
services/shortener-api/src/main/java/com/aegis/shortener/domain/: AppUser.java  (+2 more)
services/shortener-api/src/main/resources/: application.yml
services/shortener-api/src/main/resources/db/migration/: V1__init.sql
services/shortener-api/src/test/java/com/aegis/shortener/: AbstractIntegrationTest.java  LinkApiIntegrationTest.java
(+21 files in other folders)
