[project]
name = "analytics-svc"
version = "0.1.0"
description = "Consumes click events from Redis and serves link analytics from DuckDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118,<0.121",
    "uvicorn[standard]>=0.34,<0.40",
    "redis>=5.2,<6",
    "duckdb>=1.1,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "prometheus-fastapi-instrumentator>=7.0,<8",
    "python-json-logger>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "fakeredis>=2.26,<3",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
